--- a/game_pages/google_play.html
+++ b/game_pages/google_play.html
@@ -26,6 +26,7 @@
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.redantz.game.stickwars2p">Stick Battle Premium: Legends</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.smartgames.word.puzzle.block.crush">Words Search - Word Puzzles</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.unknownprojectx.breakout.r">Break Brick Out</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.unknownprojectx.non.idle.galaxy.r">Evolution Planet - 14 Billion</a></div>
     </div>
 <footer>
     <p>This website is for informational purposes only. The free games listed are subject to availability and changes. Please refer to the respective platforms for the most up-to-date information.</p>
