--- a/game_pages/humble_choice.html
+++ b/game_pages/humble_choice.html
@@ -17,16 +17,15 @@
         </a>
     </div>
     <div class="game-container">
-        <div class="game-item"><a href="https://www.humblebundle.com/membership">Metal Slug Tactics</a></div>
-        <div class="game-item"><a href="https://www.humblebundle.com/membership">Wizard of Legend 2</a></div>
-        <div class="game-item"><a href="https://www.humblebundle.com/membership">Settlement Survival</a></div>
-        <div class="game-item"><a href="https://www.humblebundle.com/membership">Etrian Odyssey II HD</a></div>
-        <div class="game-item"><a href="https://www.humblebundle.com/membership">Handmancers Playtest</a></div>
+        <div class="game-item"><a href="https://www.humblebundle.com/membership">Squirrel with a Gun</a></div>
+        <div class="game-item"><a href="https://www.humblebundle.com/membership">Core Keeper</a></div>
+        <div class="game-item"><a href="https://www.humblebundle.com/membership">Date Everything</a></div>
+        <div class="game-item"><a href="https://www.humblebundle.com/membership">SteamWorld Build</a></div>
+        <div class="game-item"><a href="https://www.humblebundle.com/membership">Bus Simulator 21 Next Stop</a></div>
         <div class="game-item"><a href="https://www.humblebundle.com/membership">Get One Month of IGN Plus</a></div>
-        <div class="game-item"><a href="https://www.humblebundle.com/membership">Sonic Frontiers</a></div>
-        <div class="game-item"><a href="https://www.humblebundle.com/membership">Nice Day for Fishing</a></div>
-        <div class="game-item"><a href="https://www.humblebundle.com/membership">Hunt: Showdown 1896</a></div>
-        <div class="game-item"><a href="https://www.humblebundle.com/membership">Tomb Raider IV-VI Remastered</a></div>
+        <div class="game-item"><a href="https://www.humblebundle.com/membership">Big Helmet Heroes</a></div>
+        <div class="game-item"><a href="https://www.humblebundle.com/membership">Resident Evil Village</a></div>
+        <div class="game-item"><a href="https://www.humblebundle.com/membership">StarVaders</a></div>
     </div>
 <footer>
     <p>This website is for informational purposes only. The free games listed are subject to availability and changes. Please refer to the respective platforms for the most up-to-date information.</p>
