--- a/game_pages/google_play.html
+++ b/game_pages/google_play.html
@@ -21,6 +21,7 @@
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.devvisiongames.dglandlight.survival">Dead God Land - Light Survival</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.fansipan.idle.summoners.era.heroes.afk">Summoners Era: Idle Strategy</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.fansipan.stickman.shadow.knights.fightinggames">Shadow Knight: Ninja Fighting</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.fori.slimelegends">Slime Legends - Survivor</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.gemjam.sword.fight.pro.medieval.knight.fighter.duel.fighting.pvp.arena.rpg.games">Sword Fight: Knight Arena Pro</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.livezen.BurningSky.vip">Burning Sky VIP</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.pixelstar.PixelFBladeVIP">Pixel Blade M VIP</a></div>
