--- a/game_pages/google_play.html
+++ b/game_pages/google_play.html
@@ -22,6 +22,7 @@
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.cscmobi.merge.cafe.premium">Merge Cafe Premium -Home Decor</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.cscmobi.merge.city.premium">Merge City Premium -Home decor</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.eggies.mathriddles">Math Riddles: Math Me</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.eggies.spellingmaster">Spelling Master - Quiz Games</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.eggies.triviamaster">Trivia Master - Quiz Games</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.fori.slimelegends">Slime Legends - Survivor</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.gemjam.sword.fight.pro.medieval.knight.fighter.duel.fighting.pvp.arena.rpg.games">Sword Fight: Knight Arena Pro</a></div>
@@ -33,7 +34,6 @@
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.superclay.vipbalcan">[VIP] Mr. Balcan Idle</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.unknownprojectx.gravity.flight.r">Gravity Range</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.unknownprojectx.whitenightmare.r">Find White Color</a></div>
-        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.whitewind.knifehit">[365fun] Knife Hit</a></div>
     </div>
 <footer>
     <p>This website is for informational purposes only. The free games listed are subject to availability and changes. Please refer to the respective platforms for the most up-to-date information.</p>
