--- a/game_pages/steam.html
+++ b/game_pages/steam.html
@@ -17,6 +17,7 @@
         </a>
     </div>
     <div class="game-container">
+        <div class="game-item"><a href="https://store.steampowered.com/app/3017580/Paragnosia/?snr=1_7_7_2300_150_1">Paragnosia</a></div>
         <div class="game-item"><a href="https://store.steampowered.com/app/4391750/Halcyon_Days_at_Taoyuan__Galloping_Horse_Pack/?snr=1_7_7_2300_150_1">Halcyon Days at Taoyuan - Galloping Horse Pack</a></div>
     </div>
 <footer>
