--- a/game_pages/google_play.html
+++ b/game_pages/google_play.html
@@ -19,6 +19,7 @@
     <div class="game-container">
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.pockettrend.neomonsters">Neo Monsters</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.QuanticBit.Flyre">Flyre: Rain Escape</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.QuanticBit.TheLittleEggChallenge">The Little Egg Challenge</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.empire.warriors2.premium.epic.tower.td.defender.rush">Empire Defender Offline Games</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.minoslab.cashshark">Cash Shark - Earn Money</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.pgstudio.bowmasters.rpg.shooting.monster">Monster Killer Pro - Shooter</a></div>
