--- a/game_pages/google_play.html
+++ b/game_pages/google_play.html
@@ -19,6 +19,7 @@
     <div class="game-container">
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.pockettrend.neomonsters">Neo Monsters</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.QuanticBit.Flyre">Flyre: Rain Escape</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.QuanticBit.Impactum">Impact - Protect Earth</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.QuanticBit.TheLittleEggChallenge">The Little Egg Challenge</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.empire.warriors2.premium.epic.tower.td.defender.rush">Empire Defender Offline Games</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.gemjam.slash.arena.pro.online.pvp.games.survivor.io.fighting.battle.royale.competitive">Slash Arena: Battle Royale Pro</a></div>
