--- a/game_pages/steam.html
+++ b/game_pages/steam.html
@@ -17,7 +17,7 @@
         </a>
     </div>
     <div class="game-container">
-        <p>No free games available today.</p>
+        <div class="game-item"><a href="https://store.steampowered.com/app/3414900/Just_MoveClean_City_Messy_Battle/?snr=1_7_7_2300_150_1">Just Move:Clean City Messy Battle</a></div>
     </div>
 <footer>
     <p>This website is for informational purposes only. The free games listed are subject to availability and changes. Please refer to the respective platforms for the most up-to-date information.</p>
