--- a/game_pages/google_play.html
+++ b/game_pages/google_play.html
@@ -17,15 +17,15 @@
         </a>
     </div>
     <div class="game-container">
-        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.pockettrend.neomonsters">Neo Monsters</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.QuanticBit.Flyre">Flyre: Rain Escape</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.QuanticBit.Impactum">Impact - Protect Earth</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.QuanticBit.TheLittleEggChallenge">The Little Egg Challenge</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.clockmaker.jewellegend.classic.match3.puzzle">Jewels Charm: Match 3 Game Pro</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.divmob.epicheroeswar.en.freemium">EHW Premium & stick fight</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.empire.warriors2.premium.epic.tower.td.defender.rush">Empire Defender Offline Games</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.gemjam.slash.arena.pro.online.pvp.games.survivor.io.fighting.battle.royale.competitive">Slash Arena: Battle Royale Pro</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.minoslab.cashshark">Cash Shark - Earn Money</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.pgstudio.bowmasters.rpg.shooting.monster">Monster Killer Pro - Shooter</a></div>
-        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.unimob.stickman.master.shadow.premium">Stickman Master Premium</a></div>
     </div>
 <footer>
     <p>This website is for informational purposes only. The free games listed are subject to availability and changes. Please refer to the respective platforms for the most up-to-date information.</p>
